image resize + restore original size feature

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -186,5 +186,8 @@
             "button": "÷"
         }
     }
+  },
+  "resize": {
+    "drag-handle-help": "Doppelklick: Originalgröße wiederherstellen"
   }
 }
