--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -184,5 +184,8 @@
             "button": "÷"
         }
     }
+  },
+  "resize": {
+    "drag-handle-help": "Double-click: Restore original size"
   }
 }
