fixed missing EN i18n messages fixed search reset bug on comments

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -57,7 +57,9 @@
     "next-result": "Next result",
     "previous-result": "Previous result",
     "clear": "Clear search",
-    "wait": "searching..."
+    "wait": "searching...",
+    "resultcount": "__count__ match",
+    "resultcount_plural": "__count__ matches"
   },
   "image-upload": {
     "header": "Add image",
