results from first user testing v0.4-alpha:  - better wording in table context menu  - added copy, cut, paste in table context menu  - added tooltip for add row/column buttons ("+")

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -58,8 +58,8 @@
     "previous-result": "zum vorherigen Treffer springen",
     "clear": "Suchfeld leeren",
     "wait": "sucht...",
-    "resultcount": "__count__ Ergebnis",
-    "resultcount_plural": "__count__ Ergebnisse"
+    "resultcount": "__count__ Treffer",
+    "resultcount_plural": "__count__ Treffer"
   },
   "image-upload": {
     "header": "Bild hinzufügen",
@@ -92,7 +92,10 @@
         "show-row-headers": "Zeilenbeschriftung einblenden",
         "show-column-headers": "Spaltenbeschriftung einblenden",
         "table-options": "Tabelle",
-        "vacuum": "Nur ausgewählte Zellen behalten"
+        "vacuum": "Tabelle auf Auswahl minimieren",
+        "copy": "Kopieren",
+        "cut": "Ausschneiden",
+        "paste": "Einfügen"
     },
     "formula": {
         "error": {
