new version 0.6-alpha. fixes:  - fillcolor for whole textfield/comment  - fixed bug in excel-cell library (unary +/- operator)  - disabled axis label inputs for chart types not supporting axis  - changed search-control behavior: X only clears input but searchbox stays open  - changed search-control behavior: closing searchbox unhighlights search results  - made popovers fixed on screen so they don't move when workspace is scrolled  - put back old wording for "first row contains headers" --> question seems unprofessional  - "first row contains headers" now unchecked per default

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -206,7 +206,7 @@
         "xaxis": "Hotizontale Achse",
         "yaxis": "Vertikale Achse",
         "unnamed-axis": "keine Beschriftung",
-        "first-data-row": "Enthält die erste Zeile Überschriften",
+        "first-data-row": "Die erste Zeile enthält Überschriften",
         "data-table": "Tabelle",
         "data-cellrange": "Zellbereich",
         "ok-button": "OK",
