--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -87,10 +87,10 @@
         "insert-column-right": "Spalte rechts hinzufügen",
         "remove-row": "Diese Zeile entfernen",
         "remove-column": "Diese Spalte entfernen",
-        "hide-row-headers": "Zeilenbeschriftung ausblenden",
-        "hide-column-headers": "Spaltenbeschriftung ausblenden",
-        "show-row-headers": "Zeilenbeschriftung einblenden",
-        "show-column-headers": "Spaltenbeschriftung einblenden",
+        "hide-row-headers": "Zeilenbeschriftungen ausblenden",
+        "hide-column-headers": "Spaltenbeschriftungen ausblenden",
+        "show-row-headers": "Zeilenbeschriftungen einblenden",
+        "show-column-headers": "Spaltenbeschriftungen einblenden",
         "table-options": "Tabelle",
         "vacuum": "Tabelle auf Auswahl minimieren",
         "copy": "Kopieren",
